<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2">

        <ImageView
            android:id="@+id/poster"
            android:contentDescription="@string/icon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/banner_loading"/>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/std_padding">

            <android.support.v7.widget.GridLayout
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:columnCount="3"
                android:padding="@dimen/std_padding" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movies_popularity"
                    style="@style/GeneralTextBold"
                    app:layout_gravity="fill"
                    app:layout_columnWeight="1"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movies_rating"
                    style="@style/GeneralTextBold"
                    app:layout_gravity="fill"
                    app:layout_columnWeight="1"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movies_released"
                    style="@style/GeneralTextBold"
                    app:layout_gravity="fill"
                    app:layout_columnWeight="1"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/GeneralText"
                    tools:text="44.8"
                    app:layout_gravity="fill"
                    app:layout_columnWeight="1"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/GeneralText"
                    tools:text="7.8 (1150)"
                    app:layout_gravity="fill"
                    app:layout_columnWeight="1"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/released"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/GeneralText"
                    tools:text="2015-03-06"
                    app:layout_gravity="fill"
                    app:layout_columnWeight="1"
                    android:gravity="center_horizontal" />

            </android.support.v7.widget.GridLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/std_padding">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/std_padding">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movies_plot"
                    style="@style/GeneralTextBold"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/plot"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/GeneralText"
                    tools:text="Lorem Ipsum" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_video"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/std_padding"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/std_padding">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movies_videos"
                    style="@style/GeneralTextBold"
                    android:gravity="center_horizontal" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_review"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/std_padding"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/std_padding">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movies_reviews"
                    style="@style/GeneralTextBold"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/review"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/GeneralText"
                    tools:text="Lorem Ipsum" />

                <TextView
                    android:id="@+id/more_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movies_reviews_more"
                    style="@style/GeneralText"
                    android:layout_gravity="end"
                    android:textColor="@drawable/button_text_color"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>